 * Synch with code spell/APLOGNO changes from Apache svn.

v1.15.7
--------------------------------------------------------------------------------
 * Fixes issue #195 regarding h2 slave connection ids that resulted in duplicate
   request ids being generated under loads.

v1.15.6
--------------------------------------------------------------------------------
 * Fix by Joe Orton for a gcc 10 warnings on s390x.

v1.15.5
--------------------------------------------------------------------------------
 * Fixed rare cases where a h2 worker could deadlock the main connection. All the good
   bits in this thanks to Yann Ylavic.
 
v1.15.4
--------------------------------------------------------------------------------
 * Fixed interaction with mod_reqtimeout. mod-h2 was knocking it out completely, however
   it allow configuration of the TLS handshake timeout and that is very useful indeed.
   Also, fixed a stupid mistake of mine that made `H2Direct` always `on`, irregardless 
   of configuration. Found and reported by <Armin.Abfalterer@united-security-providers.ch> and
   <Marcial.Rion@united-security-providers.ch>. Thanks!
 * Switched test suite and test cgis to python3. A regression in cgi.Fieldstorage() makes
   tests skip chunked uploads at the moment. Sad.
 * Merged PR by @mkaufmann that avoids multiple field lengths violations to be logged
   on the same request.
 
v1.15.3
--------------------------------------------------------------------------------
 * fixes Timeout vs. KeepAliveTimeout behaviour, see PR 63534 (for trunk now,
   mpm event backport to 2.4.x up for vote). 
 * Fixes stream cleanup when connection throttling is in place. 
 * Counts stream resets by client on streams initiated by client as cause 
   for connection throttling.
 * Header length checks are now logged similar to HTTP/1.1 protocol handler (thanks @mkaufmann)
 * Header length is checked also on the merged value from several header instances
   and results in a 431 response.
 
v1.15.2